/*
 * Copyright 2023 RobustMQ Team
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package meta.service.journal;

service EngineService {
  rpc ListShard(ListShardRequest) returns (ListShardReply) {}

  rpc CreateShard(CreateShardRequest) returns (CreateShardReply) {}

  rpc DeleteShard(DeleteShardRequest) returns (DeleteShardReply) {}

  rpc ListSegment(ListSegmentRequest) returns (ListSegmentReply) {}

  rpc CreateNextSegment(CreateNextSegmentRequest) returns (CreateNextSegmentReply) {}

  rpc DeleteSegment(DeleteSegmentRequest) returns (DeleteSegmentReply) {}

  rpc UpdateSegmentStatus(UpdateSegmentStatusRequest) returns (UpdateSegmentStatusReply) {}

  rpc ListSegmentMeta(ListSegmentMetaRequest) returns (ListSegmentMetaReply) {}

  rpc UpdateSegmentMeta(UpdateSegmentMetaRequest) returns (UpdateSegmentMetaReply) {}
}

message ListShardRequest {
  string cluster_name = 1;
  string namespace = 2;
  string shard_name = 3;
}

message ListShardReply {
  bytes shards = 1;
}

message CreateShardRequest {
  string cluster_name = 1;
  string namespace = 2;
  string shard_name = 3;
  bytes shard_config = 4;
}

message CreateShardReply {
  uint32 segment_no = 1;
  repeated uint64 replica = 2;
}

message DeleteShardRequest {
  string cluster_name = 1;
  string namespace = 2;
  string shard_name = 3;
}

message DeleteShardReply {}

message ListSegmentRequest {
  string cluster_name = 1;
  string namespace = 2;
  string shard_name = 3;
  int32 segment_no = 4;
}

message ListSegmentReply {
  bytes segments = 1;
}

message CreateNextSegmentRequest {
  string cluster_name = 1;
  string namespace = 2;
  string shard_name = 3;
}

message CreateNextSegmentReply {}

message DeleteSegmentRequest {
  string cluster_name = 1;
  string namespace = 2;
  string shard_name = 3;
  uint32 segment_seq = 4;
}

message DeleteSegmentReply {}

message UpdateSegmentStatusRequest {
  string cluster_name = 1;
  string namespace = 2;
  string shard_name = 3;
  uint32 segment_seq = 4;
  string cur_status = 5;
  string next_status = 6;
}

message UpdateSegmentStatusReply {}

message ListSegmentMetaRequest {
  string cluster_name = 1;
  string namespace = 2;
  string shard_name = 3;
  int32 segment_no = 4;
}

message ListSegmentMetaReply {
  bytes segments = 1;
}

message UpdateSegmentMetaRequest {
  string cluster_name = 1;
  string namespace = 2;
  string shard_name = 3;
  uint32 segment_no = 4;
  int64 start_offset = 5;
  int64 end_offset = 6;
  int64 start_timestamp = 7;
  int64 end_timestamp = 8;
}

message UpdateSegmentMetaReply {}
